tests/baselines/reference/importAliasAnExternalModuleInsideAnInternalModule.errors.txt
tests/cases/compiler/importAliasAnExternalModuleInsideAnInternalModule_file0.ts(1,15): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/compiler/importAliasAnExternalModuleInsideAnInternalModule_file1.ts (0 errors) ====
    import r = require('importAliasAnExternalModuleInsideAnInternalModule_file0');
    module m_private {
        //import r2 = require('m'); // would be error
        export import C = r; // no error
        C.m.foo();
    }
    
==== tests/cases/compiler/importAliasAnExternalModuleInsideAnInternalModule_file0.ts (1 errors) ====
    export module m {
                  ~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
        export function foo() { }
    }
    